FIx navbar links on mobile

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -120,19 +120,18 @@ header {
           padding-left: 10px;
           display: inline;
           float: left;
+          color: #eee;
+          cursor: pointer;
+        }
 
-          a {
-            color: #eee;
-          }
-
-          a:hover {
+        li:hover {
             color: #bbb;
-          }
         }
       }
     }
   }
 }
+
 
 
 .test1 {
